--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ ul.sub-text {
   <div class="content">
     <p class="main-text">women-owned, immigrant-owned.</p>
     <p class="sub-text">proud native new yorkers.</p>
-    <img src="https://i.imgur.com/dt6ejiq.png" alt="Team Photo" class="team-photo">
+    <img src="https://i.imgur.com/6lexhng.png" alt="Team Photo" class="team-photo">
   </div>
 </div>
 
