--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ transition: transform 0.3s ease, box-shadow 0.3s ease;
     <p class="main-text">case study</p>
     <p class="sub-text">underage&overserved teamed up with side quest at fractal tech to increase their average event attendance by >300% with thoughtful event marketing and playful, bespoke touches.</p>
     <div class="case-study-content">
-      <img src="https://i.imgur.com/g2anG9S.gif" alt="Side Quest Case Study" class="case-study-gif">
+      <img src="https://i.imgur.com/eH2S7mW.gif" alt="Side Quest Case Study" class="case-study-gif">
       <div class="case-study-chart">
         <canvas id="attendanceChart"></canvas>
       </div>
@@ -255,7 +255,7 @@ transition: transform 0.3s ease, box-shadow 0.3s ease;
 <div class="slide">
   <div class="content">
     <p class="main-text">women-owned, immigrant-owned.</p>
-    <p class="sub-text">proud native new yorkers.</p>
+    <p class="sub-text">our team is owned and operated by proud native new yorkers.</p>
     <img src="https://i.imgur.com/kN56Hyc.png" alt="Team Photo" class="team-photo">
   </div>
 </div>
