--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@ transition: transform 0.3s ease, box-shadow 0.3s ease;
     <p class="main-text">creating "fourth spaces"</p>
     <p class="sub-text">inspired by Patricia Mou's concept and the documentary "Join or Die"</p>
     <div class="split-content">
-      <div class="image-placeholder">Fourth Space Concept Illustration</div>
-      <div class="image-placeholder">Join or Die Documentary Screenshot</div>
+      <div><img src="https://i.imgur.com/sPtKf9d.jpeg" alt="Fourth Space Concept Illustration" class="image-placeholder"></div>
+      <div><img src="https://i.imgur.com/GgRHml1.jpeg" alt="Join or Die Documentary Screenshot" class="image-placeholder"></div>
     </div>
   </div>
 </div>
