--- a/index.html
+++ b/index.html
@@ -344,20 +344,20 @@ transition: transform 0.3s ease, box-shadow 0.3s ease;
   <div class="content">
     <p class="main-text">our milestones</p>
     <div class="milestone">
-      <div class="milestone-date">month 1-3</div>
-      <div class="milestone-content">launch website and social media presence. secure first 3 major clients. finalize core team of 5 members. purchase high-end event photography equipment.</div>
+      <div class="milestone-date">milestone reached 1</div>
+      <div class="milestone-content"> finalize core team. find work not just for myself but for my team. </div>
     </div>
     <div class="milestone">
-      <div class="milestone-date">month 4-6</div>
-      <div class="milestone-content">host first signature event. establish partnerships with telos.haus and freelancers hub locally. reach $20,000 in revenue.</div>
+      <div class="milestone-date">milestone reached 2</div>
+      <div class="milestone-content">hosted first signature event sponsored by underage&overserved. we've already established partnerships with telos.haus and fractal community and hosted two collaborative events. looking to work with freelancers hub next.</div>
     </div>
     <div class="milestone">
-      <div class="milestone-date">month 7-9</div>
-      <div class="milestone-content">establish reputation in market. develop signature style and continue to create and build portfolio of exclusive events. begin receiving client referrals from high-profile events.</div>
+      <div class="milestone-date">mid-term goal</div>
+      <div class="milestone-content">develop signature style and continue to create and build portfolio of exclusive events. launch referral program for clients. secure first event production contract with corporate brand. </div>
     </div>
     <div class="milestone">
-      <div class="milestone-date">month 10-12</div>
-      <div class="milestone-content">secure 3 contracts with corporate brands by year-end. launch referral program for clients. reach revenue of 40% from referrals and 60% from paid leads by month 12.</div>
+      <div class="milestone-date">long-term goal</div>
+      <div class="milestone-content">establish reputation in market. begin receiving client referrals for high-profile events and dominate organic seo. </div>
     </div>
   </div>
 </div>
