--- a/index.html
+++ b/index.html
@@ -107,12 +107,23 @@ body, html {
   font-size: 1.5vw;
   margin: 10px 0;
 }
+.creatives-on-fire {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.4vw;
+  line-height: 1.6;
+  text-align: right;
+  padding: 20px;
+  background-color: transparent;
+  color: var(--text-color);
+}
+
 .split-content {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
 }
+
 .split-content > div {
   width: 48%;
   margin-bottom: 20px;
@@ -262,15 +273,7 @@ ul.sub-text {
   color: var(--text-color);
 }
 
-.creatives-on-fire {
-  font-family: 'Playfair Display', serif;
-  font-size: 1.5vw;
-  line-height: 1.6;
-  margin-top: 20px;
-  padding: 20px;
-  background-color: rgba(230, 166, 76, 0.1);
-  border-radius: 10px;
-}
+
 </style>
 </head>
 <body>
@@ -421,7 +424,7 @@ ul.sub-text {
       <li>Catering coordination</li>
       <li>Bespoke event consulting</li>
     </ul>
-    <p class="sub-text">We're growing into a comprehensive event production company, leveraging our expertise in staffing, photography, and coordination to deliver unforgettable experiences.</p>
+    <p class="sub-text" style="font-size: 2.5em; color: #e6a64;">We're growing into a comprehensive event production company, leveraging our expertise in staffing, photography, and coordination to deliver unforgettable experiences.</p>
   </div>
 </div>
 
@@ -454,13 +457,14 @@ ul.sub-text {
   <div class="content">
     <p class="main-text">creatives on fire</p>
     <p class="sub-text">empowering underrepresented creatives through resources, education, and networking</p>
-    <p class="sub-text">"The best way to find yourself is to lose yourself in the service of others." - Gandhi</p>
     <div class="split-content">
       <div><img src="https://i.imgur.com/J3wmHWH.jpeg" alt="Creatives on Fire Event Photo 1" class="image-placeholder"></div>
       <div class="creatives-on-fire">
-        workathons, technology workshops, community get-togethers, and informational panels—designed to foster collaboration, creativity, and financial independence within the creative community. hands-on learning, relationship-building, and growth opportunities that directly align with underage & overserved's vision of building meaningful, high-energy experiences.
+        <br><br><b>workathons, technology workshops, community get-togethers,</b> and <b>informational panels</b>—designed to foster collaboration, creativity, and financial independence within the creative community. 
+        <br> <br> hands-on learning, relationship-building, and growth opportunities that directly align with underage & overserved's vision of building meaningful, high-energy experiences.
       </div>
     </div>
+    <p class="sub-text">"The best way to find yourself is to lose yourself in the service of others." - Gandhi</p>
   </div>
 </div>
 
