--- a/index.html
+++ b/index.html
@@ -22,6 +22,119 @@ body, html {
   overflow: hidden;
   text-transform: lowercase;
 }
+@media (max-width: 768px) {
+  .slide {
+    padding: 20px 5%;
+  }
+
+  .logo {
+    font-size: 8vw;
+  }
+
+  .main-text {
+    font-size: 6vw;
+  }
+
+  .sub-text {
+    font-size: 4vw;
+  }
+
+  .split-content {
+    flex-direction: column;
+  }
+
+  .split-content > div {
+    width: 100%;
+  }
+
+  .image-placeholder {
+    height: 30vh;
+    font-size: 3vw;
+  }
+
+  .infographic-title {
+    font-size: 5vw;
+  }
+
+  .infographic-percentage {
+    font-size: 4vw;
+  }
+
+  .infographic-text {
+    font-size: 3.5vw;
+  }
+
+  .milestone-date {
+    font-size: 3.5vw;
+  }
+
+  .milestone-content {
+    font-size: 3vw;
+  }
+
+  .creatives-on-fire {
+    font-size: 3.5vw;
+    text-align: left;
+  }
+
+  .chart-container {
+    height: 30vh;
+  }
+
+  .team-photo {
+    max-height: 40vh;
+  }
+
+  .mind-map {
+    height: 60vh;
+  }
+
+  .mind-map-node {
+    font-size: 2.5vw;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo {
+    font-size: 10vw;
+  }
+
+  .main-text {
+    font-size: 7vw;
+  }
+
+  .sub-text {
+    font-size: 5vw;
+  }
+
+  .infographic-title {
+    font-size: 6vw;
+  }
+
+  .infographic-percentage {
+    font-size: 5vw;
+  }
+
+  .infographic-text {
+    font-size: 4.5vw;
+  }
+
+  .milestone-date {
+    font-size: 4.5vw;
+  }
+
+  .milestone-content {
+    font-size: 4vw;
+  }
+
+  .creatives-on-fire {
+    font-size: 4.5vw;
+  }
+
+  .mind-map-node {
+    font-size: 3vw;
+  }
+}
 .slide {
   height: 100vh;
   width: 100vw;
