--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ ul.sub-text {
 <div class="slide">
   <div class="content">
     <p class="main-text">case study</p>
-    <p class="sub-text">underage&overserved teamed up with side quest at fractal tech & <span class="sub-text" style="color: var(--accent-color);">increased their average event attendance by &gt;300%</span> with thoughtful event marketing and playful, bespoke touches.</p>
+    <p class="sub-text">underage&overserved teamed up with side quest at fractal tech & increased their average event attendance by <span class="sub-text" style="color: var(--accent-color);">&gt;300%</span> with thoughtful event marketing and playful, bespoke touches.</p>
 
     <div class="case-study-content">
       <img src="https://i.imgur.com/eH2S7mW.gif" alt="Side Quest Case Study" class="case-study-gif">
