--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@ ul.sub-text {
 <div class="slide">
   <div class="content">
     <p class="main-text">creatives on fire</p>
-    <p class="sub-text">empowering underrepresented creatives through resources, education, and networking</p>
+    <p class="sub-text">empowering underrepresented creatives through resources, education, and collaboration</p>
     <div class="split-content">
       <div><img src="https://i.imgur.com/J3wmHWH.jpeg" alt="Creatives on Fire Event Photo 1" class="image-placeholder"></div>
       <div class="creatives-on-fire">
@@ -790,10 +790,10 @@ ul.sub-text {
 <div class="slide">
   <div class="content">
     <p class="main-text">our network spans</class> <class="main-text", style="color: var(--accent-color);">global.</p>
-    <p class="sub-text">5 thoughtfully executed events, all 5-star reviews. proof of fun? we've got NFTs for that.</p>
+    <p class="sub-text">3 thoughtfully executed events within 1 month, all 5-star reviews. proof of fun? we've got NFTs for that.</p>
     <div class="split-content">
-      <div class="image-placeholder">Malaysia Event Photo 1</div>
-      <div class="image-placeholder">NFT Screenshot</div>
+      <div><img src="https://i.imgur.com/DXeYQMT.png" alt="Malaysia Review 1" class="image-placeholder"></div>
+      <div><img src="https://i.imgur.com/lAv8PnY.jpeg" alt="NFT Screenshot" class="image-placeholder"></div>
     </div>
   </div>
 </div>
