--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@ ul.sub-text {
       </div>
     </div>
     <div class="strategic-note">
-      <p>Photography not just a service of ours; it's a strategic marketing expense. I will synergistically leverage my photography business to attract clients for underage & overserved.</p>
+      <p>Photography is not just a service of ours; it's a strategic marketing expense. I will synergistically leverage my photography business to attract clients for underage & overserved.</p>
     </div>
   </div>
 </div>
@@ -801,7 +801,7 @@ ul.sub-text {
 <div class="slide">
   <div class="content">
     <p class="main-text"> scrappy &</class><class="main-text" style="color: var(--accent-color);"> resourceful.</class>
-    <p class="sub-text">#1 on Google with just $30. coded 10 websites with zero experience. if it needs doing, we'll get it done.</p>
+    <p class="sub-text">#1 on Google with just $30. coded 10 websites with zero experience. imagine what i'll be able to do with $20k.</p>
     <div class="split-content">
       <div><img src="https://i.imgur.com/rgtSiCb.png" alt="Google Search Results Screenshot" class="image-placeholder"></div>
       <div><img src="https://i.imgur.com/dRioYaC.png" alt="Website Portfolio Collage" class="image-placeholder"></div>
