--- a/index.html
+++ b/index.html
@@ -633,6 +633,16 @@ ul.sub-text {
 </style>
 </head>
 <body>
+  <div class="slide">
+  <div class="content">
+    <p class="main-text">hello <span style="color: var(--accent-color);">powerup judges</span>!</p>
+    <p class="sub-text">please scan this qr code:</p>
+    <div class="split-content">
+      <div><img src="https://imgur.com/Qdk2m85" alt="QR code" class="image-placeholder"></div>
+
+    </div>
+  </div>
+</div>
 
 <div class="slide active">
   <div class="content">
